@startuml "fields"
skinparam linetype ortho
interface "IField"
interface "ICollector"
interface "IHead"

  interface IDriver{
       + nextMove(): IField
       + setNext(f: IField): void
       + getCurrent(): IField
       + getNext(): IField
}

   abstract class Vehicle {
       + step(): void
       + step(forced: bool): void
       + contact(v: Vehicle): void
       + getDriver(): IDriver
       + interact(field: IField): void
   }

    Vehicle --> "1" IDriver: driver
   
       interface IInventory{
           + removeItem(i: IInventoryItem, amount: int): bool
           + addItem(i: IInventoryItem  , amount: int): void
       }

  interface ISnowPlow{
           +switchHead(head: IHead): bool
           +getInventory(): IInventory
       }
       
    class SnowPlow extends Vehicle implements ISnowPlow, ShopItem
    {
    +switchHead(head: IHead): bool
    +getInventory(): IInventory
    +price(): int
    +step(): void
    +step (forced: bool): void
    +contact(v: Vehicle): void
    +getDriver(): IDriver
    +interact(field: IField): void
    }

    SnowPlow --> "1" IInventory: inventory
    SnowPlow --> "1" ICollector: collector
    SnowPlow --> "1" IHead: currentHead


    class Bus extends Vehicle
    {
    -immobileTurnsLeft: int
    +step(): void
    +step(forced: bool): void
    +contact(v: Vehicle): void
    +getDriver(): IDriver
    +interact(field: IField): void
    }
    
    Bus --> "1" Station: destination
    Bus --> "1" ICollector: collector


    class Inventory implements IInventory{
        - items : Map<string,int>
        + removeItem(i : IInventoryItem, amount : int) : bool
        + addItem(i: IInventoryItem, amount : int) : void
    }


    class Car extends Vehicle
    {
    -immobileTurnsLeft: int
    +step(): void
    +step (forced: bool): void
    +contact(v: Vehicle): void
    +getDriver(): IDriver
    +interact(field: IField): void
    }
    
    Car --> "1" Office: destination


    class CarDriver implements IDriver{
        + nexMove() : IField
        + setNext(field : IField) : void
        + getCurrent() : IField
        + getNext() : IField
    }

    CarDriver --> "1" IField: current
    CarDriver --> "1" IField: next

    class PlayerDriver implements IDriver{
        + nexMove() : IField
        + setNext(field : IField) : void
        + getCurrent() : IField
        + getNext() : IField
    }

    PlayerDriver --> "1" IField: current
    PlayerDriver --> "1" IField: next

@enduml